# Langchain_Cours_MLOps

./: .env  README.md  pyproject.toml
src/: app.py  chap1_fund_components.py  chap2_prompt_output.py  chap3_docs.py  chap4_memory.py
src/agents/: doc_agent.py
src/api/: main.py
src/core/: chains.py  llm.py  parsers.py  tools.py
src/documents/: cleaners.py  loaders.py  search.py  splitters.py  tools.py
src/memory/: memory.py  session.py
src/prompts/: prompts.py
src/utils/: token.py
